language/move-prover/tests/sources/specs-in-fun.exp
Move prover returns: exiting with boogie verification errors
error:  This assertion might not hold.

    ┌── tests/sources/specs-in-fun.move:40:13 ───
    │
 40 │             assert x == y;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/specs-in-fun.move:37:5: simple1_invalid (entry)
    =     at tests/sources/specs-in-fun.move:38:9: simple1_invalid
    =         x = <redacted>,
    =         y = <redacted>

error:  This assertion might not hold.

    ┌── tests/sources/specs-in-fun.move:48:13 ───
    │
 48 │             assert x == y;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/specs-in-fun.move:44:5: simple2_invalid (entry)
    =     at tests/sources/specs-in-fun.move:46:15: simple2_invalid
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/specs-in-fun.move:48:13: simple2_invalid

error:  This assertion might not hold.

    ┌── tests/sources/specs-in-fun.move:55:13 ───
    │
 55 │             assert x > y;
    │             ^^^^^^^^^^^^^
    │
    =     at tests/sources/specs-in-fun.move:52:5: simple3_invalid (entry)

error:  This assertion might not hold.

    ┌── tests/sources/specs-in-fun.move:64:13 ───
    │
 64 │             assert z > 2*x;
    │             ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/specs-in-fun.move:59:5: simple4_invalid (entry)
    =     at tests/sources/specs-in-fun.move:61:15: simple4_invalid
    =         x = <redacted>,
    =         y = <redacted>,
    =         z = <redacted>
    =     at tests/sources/specs-in-fun.move:63:13: simple4_invalid
